--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="he" dir="rtl">
 
 <head>
 
@@ -30,7 +30,7 @@
   <link rel="stylesheet" type="text/css" href="./css/style.css">
 
 
-  <title>Law Farm || Mrh Rifat</title>
+  <title>משרד עורכי דין || גוילי מורים</title>
 </head>
 
 <body id="page-top">
@@ -44,7 +44,7 @@
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
           <img src="img/logo1.png" alt="Logo" class="img-fluid">
           <span></span>
-          <label>Law Farm</label>
+          <label>גוילי-מורים</label>
         </a>
 
         <!-- Toggle Button -->
@@ -58,25 +58,25 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#page-top">Home</a>
+              <a class="nav-link js-scroll-trigger" href="#page-top">דף הבית</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about-us">About Us</a>
+              <a class="nav-link js-scroll-trigger" href="#about-us">קצת עלינו</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#practice-area">Practice Area</a>
+              <a class="nav-link js-scroll-trigger" href="#practice-area">תחום עיסוק</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#lawyers">Lawyers</a>
+              <a class="nav-link js-scroll-trigger" href="#lawyers">עורכי הדין</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
+              <a class="nav-link js-scroll-trigger" href="#publications">פרסומים</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#faq">FAQ</a>
+              <a class="nav-link js-scroll-trigger" href="#faq">שאלות נפוצות</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact Us</a>
+              <a class="nav-link js-scroll-trigger" href="#contact">צרו קשר</a>
             </li>
           </ul>
         </div>
@@ -94,13 +94,13 @@
         <div class="row">
           <div class="col-md-5 offset-md-2">
             <div class="hero-heading">
-              <h1 class="text-light">Adam Suaerez</h1>
-              <h5 class="text-light">Lawyer</h5>
+              <h1 class="text-light">גוילי מורים</h1>
+              <h5 class="text-light">עורכי דין</h5>
             </div>
           </div>
-          <div class="col-md-5  pt-5">
-            <button class="btn btn-custom">Contact Me</button>
-          </div>
+          <!--<div class="col-md-5  pt-5">
+             <button class="btn btn-custom">Contact Me</button>
+          </div>-->
         </div>
       </div>
     </div>
@@ -114,10 +114,9 @@
       <div class="row">
         <div class="col-md-7">
           <div class="about-heading wow fadeInLeft">
-            <h1>About Us</h1>
+            <h1>קצת עלינו </h1>
             <p>
-              We are regarded as industry leaders in stunning website solutions, focused on delivering unsurpassed user
-              experiences.
+              משרדנו מתמחה בדיני נזיקין וחוזים, ומעניק ללקוחותינו ליווי משפטי מקצועי, אישי ומדויק. עם ניסיון עשיר ויחס מחויב לכל תיק, אנו פועלות בנחישות למימוש זכויותיכם ולהשגת התוצאה הטובה ביותר.
             </p>
           </div>
         </div>
@@ -127,41 +126,38 @@
       <div class="row pt-5">
         <div class="col-md-6">
           <!-- History -->
-          <h5>History</h5>
+          <h5>היסטוריה </h5>
 
           <!-- History 1 Start-->
           <div class="row pt-3">
             <div class="col-md-3 pl-4">
-              <h6>-2018</h6>
+              <h6>-2023</h6>
             </div>
             <div class="col-md-9">
               <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's
+                ליווינו בהצלחה עשרות לקוחות בתביעות נזיקין מורכבות וחתמנו על שורה של הסכמים משמעותיים בתחום החוזים.
               </p>
             </div>
             <!-- History 1 End-->
 
             <!-- History 2 Start-->
             <div class="col-md-3 pl-4">
-              <h6>-2019</h6>
+              <h6>-2024</h6>
             </div>
             <div class="col-md-9">
               <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's
+                הרחבנו את תחומי ההתמחות שלנו, ייצגנו לקוחות בתיקים תקדימיים והמשכנו לספק ייעוץ משפטי איכותי ומדויק.
               </p>
             </div>
             <!-- History 2 End-->
 
             <!-- History 3 Start-->
             <div class="col-md-3 pl-4">
-              <h6>-2020</h6>
+              <h6>-2025</h6>
             </div>
             <div class="col-md-9">
               <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's
+                מתחדשות ומתפתחות! השקנו שירותים משפטיים מתקדמים, הרחבנו את הצוות שלנו, וממשיכות להוביל בתחום הנזיקין והחוזים.
               </p>
             </div>
           </div>
@@ -172,12 +168,9 @@
         <div class="col-md-5 pb-5 expertise">
           <h5>Expertise</h5>
           <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
-            electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
-            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
-            Aldus PageMaker including versions of Lorem Ipsum.
+            **משרדנו מתמחה בדיני נזיקין וחוזים, ומעניק ללקוחות פרטיים ועסקיים ליווי משפטי מקצועי, יסודי ומותאם אישית. אנו מייצגות נפגעים בתביעות נזיקין מול גופים פרטיים וציבוריים, לרבות תאונות דרכים, רשלנות רפואית ותאונות עבודה. בנוסף, אנו מספקות ייעוץ וייצוג משפטי בתחום החוזים – מניסוח ועריכת חוזים מסחריים ופרטיים ועד ליישוב סכסוכים והליכים משפטיים.
+            
+            עם ניסיון עשיר, ידע מעמיק ונחישות בלתי מתפשרת, אנו מחויבות להעניק לכל לקוח את המענה המשפטי המדויק והמקצועי ביותר, תוך ליווי אישי ושקיפות מלאה לאורך כל הדרך.**
           </p>
         </div>
         <!-- Expertise End -->
@@ -194,9 +187,8 @@
       <div class="row">
         <div class="col-lg-7">
           <div class="practice-heading wow fadeInLeft">
-            <h2 class="text-light">Practice Area</h2>
-            <p>We are regarded as industry leaders in stunning website solutions, focused on delivering unsurpassed user
-              experiences.</p>
+            <h2 class="text-light">תחום עיסוקנו </h2>
+            <p>משרדנו מתמחה בדיני נזיקין וחוזים, ומספק ללקוחותינו ליווי משפטי מקיף – מתביעות נזיקין בגין נזקי גוף ורכוש ועד לייעוץ, ניסוח וייצוג בסוגיות חוזיות מורכבות, תוך דגש על מקצועיות, יסודיות ושירות אישי. </p>
           </div>
         </div>
       </div>
@@ -287,9 +279,8 @@
         <div class="col-lg-7">
           <!-- Lawyers Heading Start -->
           <div class="lawyers-heading wow fadeInLeft">
-            <h1>Meet Our Attorney</h1>
-            <p>We are regarded as industry leaders in stunning website solutions, focused on delivering unsurpassed user
-              experiences.</p>
+            <h1>מי אנחנו? </h1>
+            <p>צוות מוכשר, בעלות ניסייון, אכפתיות ונתינה אינסופית </p>
           </div>
           <!-- Lawyers Heading End -->
         </div>
@@ -304,8 +295,8 @@
           <div class="card">
             <img src="img/team-one.png" alt="Team One" class="card-img-top">
             <div class="card-body">
-              <h5>Adam Suarez</h5>
-              <p>Attorney General</p>
+              <h5>מעיין מורים </h5>
+              <p>שותפה-מייסדת </p>
             </div>
           </div>
         </div>
@@ -317,16 +308,16 @@
           <div class="card">
             <img src="img/team-two.png" alt="Team Two" class="card-img-top">
             <div class="card-body">
-              <h5>Lina Suarez</h5>
-              <p>Attorney General</p>
+              <h5>זוהר גוילי </h5>
+              <p>שותפה-מייסדת </p>
             </div>
           </div>
         </div>
         <!-- 2nd Content End -->
 
-        <!-- 3rd Content Start -->
+        <!-- more
         <div class="col-md-3 col-sm-6 downteam">
-          <!-- Card Content -->
+
           <div class="card">
             <img src="img/team-three.png" alt="Team Three" class="card-img-top">
             <div class="card-body">
@@ -335,11 +326,9 @@
             </div>
           </div>
         </div>
-        <!-- 3rd Content End -->
 
-        <!-- 4th Content Start -->
         <div class="col-md-3 col-sm-6 downteam">
-          <!-- Card Content -->
+    
           <div class="card">
             <img src="img/team-four.png" alt="Team Four" class="card-img-top">
             <div class="card-body">
@@ -348,7 +337,7 @@
             </div>
           </div>
         </div>
-        <!-- 4th Content End -->
+      -->
       </div>
       <!-- Practice Content End -->
     </div>
@@ -362,9 +351,8 @@
       <div class="row">
         <div class="col-lg-8">
           <div class="clients-heading wow fadeInLeft">
-            <h1 class="text-light">Our Clients Say</h1>
-            <p>We are regarded as industry leaders in stunning website solutions, focused on delivering unsurpassed user
-              experiences.</p>
+            <h1 class="text-light">לקוחות מספרים </h1>
+            <p>אנו עובדים עם לקוחות פרטיים ותאגידים גדולים כאחד </p>
           </div>
         </div>
       </div>
@@ -382,12 +370,9 @@
           </div>
           <div class="col-md-6">
             <div class="clients-message p-2 ml-3">
-              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et
-                ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem.Lorem ipsum dolor sit amet,
-                consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
-              <h3 class="text-light">Alon Smith</h3>
-              <h6 class="text-light">CEO of AVC Group</h6>
+              <p>"לאורך כל התהליך קיבלתי ליווי משפטי מקצועי, יסודי ואכפתי. הצוות היה זמין לכל שאלה, הסביר לי כל שלב בדרך ודאג לאינטרסים שלי עד להשגת התוצאה הטובה ביותר. אני ממליץ בחום לכל מי שמחפש ייצוג משפטי אמין ומקצועי!" </p>
+              <h3 class="text-light">אלון סמית </h3>
+              <h6 class="text-light">מנכ"ל חברת חירטוטים </h6>
             </div>
           </div>
         </div>
@@ -402,12 +387,9 @@
           </div>
           <div class="col-md-6">
             <div class="clients-message p-2 ml-3">
-              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et
-                ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem.Lorem ipsum dolor sit amet,
-                consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
-              <h3 class="text-light">Alon Smith</h3>
-              <h6 class="text-light">CEO of AVC Group</h6>
+              <p>"מהרגע הראשון הרגשתי שאני בידיים טובות. המקצועיות, היסודיות והיחס האישי עשו את כל ההבדל. תודה על הליווי הצמוד והנחישות שהובילה לתוצאה מצוינת! ממליצה בחום לכל מי שזקוק לייצוג משפטי." </p>
+              <h3 class="text-light">מיכאלה דיין</h3>
+              <h6 class="text-light">חברת מקורות </h6>
             </div>
           </div>
         </div>
@@ -422,12 +404,9 @@
           </div>
           <div class="col-md-6">
             <div class="clients-message p-2 ml-3">
-              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et
-                ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem.Lorem ipsum dolor sit amet,
-                consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
-              <h3 class="text-light">Alon Smith</h3>
-              <h6 class="text-light">CEO of AVC Group</h6>
+              <p>"לאורך כל הדרך הרגשתי שיש לי על מי לסמוך. מהרגע הראשון קיבלתי יחס אישי, סבלנות והסברים מפורטים על כל שלב בתהליך. הצוות הפגין מקצועיות יוצאת דופן, ירידה לפרטים וחשיבה אסטרטגית שהובילה לתוצאה הטובה ביותר עבורי. תמיד הרגשתי שיש מישהו שמקשיב לי, מבין את הצרכים שלי ונלחם למעני. אני ממליץ בחום לכל מי שמחפש משרד עורכות דין מקצועי, אמין ומסור!" </p>
+              <h3 class="text-light">אלי כהן </h3>
+              <h6 class="text-light">ייזם נדלן </h6>
             </div>
           </div>
         </div>
@@ -447,9 +426,8 @@
       <div class="row pt-5">
         <div class="col-lg-8">
           <div class="publication-heading">
-            <h1>Recent Publications</h1>
-            <p>We are regarded as industry leaders in stunning website solutions, focused on delivering unsurpassed user
-              experiences.</p>
+            <h1>כתבו עלינו</h1>
+            <p>העבודות שלנו עזרו להמון אנשים בתחומים שונים בחיים שקיבלו את מה שמגיע להם בזכות העקשנות והמסירות שלנו </p>
           </div>
         </div>
       </div>
@@ -548,7 +526,7 @@
       <div class="row">
         <div class="col-lg-8">
           <div class="faq-heading wow fadeInLeft">
-            <h1 class=" text-light">Frequently asked questions</h1>
+            <h1 class=" text-light">שאלות נפוצות
             <p>
               We are regarded as industry leaders in stunning website solutions, focused on delivering unsurpassed user
               experiences.
@@ -561,34 +539,31 @@
       <div class="row pt-5">
         <div class="col-md-6 offset-md-1">
           <div class="faq-content-1" id="one">
-            <p>What paperwork do I need to complete to file for divorce?</p>
+            <p>מהו תהליך תביעה במקרה של תאונת דרכים?</p>
           </div>
           <div id="two">
-            <p>How do I change my custody and suport orders?</p>
+            <p>איך אני יכול להבטיח שהחוזה שאני חותם עליו הוא הוגן?</p>
           </div>
           <div id="three">
-            <p>How to make a General Diary?</p>
+            <p>שכמה זמן ייקח להגיש תביעה נזיקית? </p>
           </div>
           <div id="four">
-            <p>What paperwork do I need to complete to file for divorce?</p>
+            <p>שאלה מספר4 </p>
           </div>
           <div id="five">
-            <p>How do I protect a business name?</p>
+            <p>שאלה מספר5 </p>
           </div>
           <div id="six">
-            <p>Should I incorporate my business?</p>
+            <p>שאלה מספר6 </p>
           </div>
         </div>
 
         <div class="col-md-5">
           <div class="faq-content-2 p-4">
             <p>
-              Long established fact that a reader will be distracted by the readable content of a page when looking at
-              its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,
-              as opposed to using 'Content here, content here', making it look like readable English.
-
-              Many web sites still in their infancy. Various versions have evolved. sometimes by accident, sometimes on
-              purpose (injected humour and the like).
+              תהליך תביעה במקרה של תאונת דרכים כולל פנייה למשרדנו עם פרטי התאונה, דיווח על הנזקים שנגרמו לך, פתיחת תיק תביעה מול חברת הביטוח או בבית המשפט במידת הצורך. אנו נלווה אותך בכל שלב, כולל איסוף ראיות, התייעצות עם מומחים והגשת תביעות לפי הצורך.
+              אנו ממליצות לפנות אלינו לפני החתימה על חוזה, על מנת שנוכל לסייע בניתוח התנאים, ולהבטיח שהם הוגנים ומספקים את ההגנה המשפטית הנדרשת. משרדנו יציע שינויים או תיקונים, במידת הצורך, וידאג לשמור על זכויותיך.
+              זמן הגשת תביעה נזיקית תלוי בפרטי המקרה, אך בדרך כלל יש מגבלת זמן של 7 שנים. מומלץ לפנות בהקדם האפשרי כדי למנוע אי-נוחות עתידית, במיוחד כאשר מדובר בנזקים שלא תמיד ניתן לזהות אותם מיד.
             </p>
           </div>
         </div>
@@ -602,10 +577,9 @@
       <div class="row">
         <div class="col-lg-8">
           <div class="contact-heading wow fadeInLeft">
-            <h1>Contact Us</h1>
+            <h1>צור קשר </h1>
             <p>
-              We are regarded as industry leaders in stunning website solutions, focused on delivering unsurpassed user
-              experiences.
+              השאר פרטים ונחזור אליך
             </p>
           </div>
         </div>
@@ -615,22 +589,22 @@
 
         <div class="col-md-4 offset-md-1">
           <form class="form">
-            <input type="text" placeholder="Enter name..." required class="form-control">
+            <input type="text" placeholder="שם פרטי" required class="form-control">
 
-            <input type="email" placeholder="Enter email..." required class="form-control">
+            <input type="email" placeholder="אימייל" required class="form-control">
 
-            <input type="text" placeholder="Enter number..." required class="form-control">
+            <input type="text" placeholder="טלפון" required class="form-control">
 
-            <input type="text" placeholder="Enter message..." required class="form-control" id="message">
+            <input type="text" placeholder="הודעה" required class="form-control" id="message">
 
-            <input type="submit" value="Send Message" class="btn btn-custom text-center">
+            <input type="submit" value="שלח" class="btn btn-custom text-center">
           </form>
         </div>
 
         <div class="col-md-4 offset-md-1 map-frame">
           <div class="map">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1859045.988315272!2d38.88873002274768!3d24.48721708020867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x15bdbe5197d220d5%3A0x2e54514fea3b08d9!2sMedina%20Saudi%20Arabia!5e0!3m2!1sen!2sbd!4v1641323718368!5m2!1sen!2sbd"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1859045.988315272!2d34.7927!3d31.9686!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151d3b3fb69d1a1f%3A0x2e54514fea3b08d9!2sRishon%20Lezion%2C%20Israel!5e0!3m2!1sen!2sbd!4v1641323718368!5m2!1sen!2sbd"
               width="350" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
           </div>
         </div>
