--- a/index.html
+++ b/index.html
@@ -351,8 +351,9 @@
       <div class="row">
         <div class="col-lg-8">
           <div class="clients-heading wow fadeInLeft">
-            <h1 class="text-light">לקוחות מספרים </h1>
-            <p>אנו עובדים עם לקוחות פרטיים ותאגידים גדולים כאחד </p>
+            <h1 class="text-light">Our Clients Say</h1>
+            <p>We are regarded as industry leaders in stunning website solutions, focused on delivering unsurpassed user
+              experiences.</p>
           </div>
         </div>
       </div>
@@ -370,9 +371,12 @@
           </div>
           <div class="col-md-6">
             <div class="clients-message p-2 ml-3">
-              <p>"לאורך כל התהליך קיבלתי ליווי משפטי מקצועי, יסודי ואכפתי. הצוות היה זמין לכל שאלה, הסביר לי כל שלב בדרך ודאג לאינטרסים שלי עד להשגת התוצאה הטובה ביותר. אני ממליץ בחום לכל מי שמחפש ייצוג משפטי אמין ומקצועי!" </p>
-              <h3 class="text-light">אלון סמית </h3>
-              <h6 class="text-light">מנכ"ל חברת חירטוטים </h6>
+              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et
+                ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem.Lorem ipsum dolor sit amet,
+                consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
+              <h3 class="text-light">Alon Smith</h3>
+              <h6 class="text-light">CEO of AVC Group</h6>
             </div>
           </div>
         </div>
@@ -387,9 +391,12 @@
           </div>
           <div class="col-md-6">
             <div class="clients-message p-2 ml-3">
-              <p>"מהרגע הראשון הרגשתי שאני בידיים טובות. המקצועיות, היסודיות והיחס האישי עשו את כל ההבדל. תודה על הליווי הצמוד והנחישות שהובילה לתוצאה מצוינת! ממליצה בחום לכל מי שזקוק לייצוג משפטי." </p>
-              <h3 class="text-light">מיכאלה דיין</h3>
-              <h6 class="text-light">חברת מקורות </h6>
+              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et
+                ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem.Lorem ipsum dolor sit amet,
+                consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
+              <h3 class="text-light">Alon Smith</h3>
+              <h6 class="text-light">CEO of AVC Group</h6>
             </div>
           </div>
         </div>
@@ -404,9 +411,12 @@
           </div>
           <div class="col-md-6">
             <div class="clients-message p-2 ml-3">
-              <p>"לאורך כל הדרך הרגשתי שיש לי על מי לסמוך. מהרגע הראשון קיבלתי יחס אישי, סבלנות והסברים מפורטים על כל שלב בתהליך. הצוות הפגין מקצועיות יוצאת דופן, ירידה לפרטים וחשיבה אסטרטגית שהובילה לתוצאה הטובה ביותר עבורי. תמיד הרגשתי שיש מישהו שמקשיב לי, מבין את הצרכים שלי ונלחם למעני. אני ממליץ בחום לכל מי שמחפש משרד עורכות דין מקצועי, אמין ומסור!" </p>
-              <h3 class="text-light">אלי כהן </h3>
-              <h6 class="text-light">ייזם נדלן </h6>
+              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et
+                ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem.Lorem ipsum dolor sit amet,
+                consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
+              <h3 class="text-light">Alon Smith</h3>
+              <h6 class="text-light">CEO of AVC Group</h6>
             </div>
           </div>
         </div>
@@ -604,7 +614,7 @@
         <div class="col-md-4 offset-md-1 map-frame">
           <div class="map">
             <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1859045.988315272!2d34.7927!3d31.9686!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151d3b3fb69d1a1f%3A0x2e54514fea3b08d9!2sRishon%20Lezion%2C%20Israel!5e0!3m2!1sen!2sbd!4v1641323718368!5m2!1sen!2sbd"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1859045.988315272!2d34.7927!3d31.9686!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151d3b3fb69d1a1f%3A0x2e54514fea3b08d9!2sRishon%20Lezion%2C%20Israel!5e0!3m2!1sen!2sbd!4v1641323718368!5m2!1sen!2sbd"
               width="350" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
           </div>
         </div>
