--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 , shrink-to-fit=no">
   <meta name="description" content="">
-  <meta name="author" content="Rakibul Hassan Rifat">
+  <meta name="author" content="Niv Morim">
 
 
   <!-- Favicon -->
@@ -70,7 +70,7 @@
               <a class="nav-link js-scroll-trigger" href="#lawyers">עורכי הדין</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#publications">פרסומים</a>
+              <a class="nav-link js-scroll-trigger" href="#publications">המלצות</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#faq">שאלות נפוצות</a>
@@ -131,7 +131,7 @@
           <!-- History 1 Start-->
           <div class="row pt-3">
             <div class="col-md-3 pl-4">
-              <h6>-2023</h6>
+              <h6>2023</h6>
             </div>
             <div class="col-md-9">
               <p>
@@ -142,7 +142,7 @@
 
             <!-- History 2 Start-->
             <div class="col-md-3 pl-4">
-              <h6>-2024</h6>
+              <h6>2024</h6>
             </div>
             <div class="col-md-9">
               <p>
@@ -153,7 +153,7 @@
 
             <!-- History 3 Start-->
             <div class="col-md-3 pl-4">
-              <h6>-2025</h6>
+              <h6>2025</h6>
             </div>
             <div class="col-md-9">
               <p>
@@ -166,7 +166,7 @@
 
         <!-- Expertise Start-->
         <div class="col-md-5 pb-5 expertise">
-          <h5>Expertise</h5>
+          <h5>מומחיות</h5>
           <p>
             **משרדנו מתמחה בדיני נזיקין וחוזים, ומעניק ללקוחות פרטיים ועסקיים ליווי משפטי מקצועי, יסודי ומותאם אישית. אנו מייצגות נפגעים בתביעות נזיקין מול גופים פרטיים וציבוריים, לרבות תאונות דרכים, רשלנות רפואית ותאונות עבודה. בנוסף, אנו מספקות ייעוץ וייצוג משפטי בתחום החוזים – מניסוח ועריכת חוזים מסחריים ופרטיים ועד ליישוב סכסוכים והליכים משפטיים.
             
@@ -325,107 +325,6 @@
           </div>
         </div>
 
-        <div class="col-md-3 col-sm-6 downteam">
-    
-          <div class="card">
-            <img src="img/team-four.png" alt="Team Four" class="card-img-top">
-            <div class="card-body">
-              <h5>Linister White</h5>
-              <p>Attorney General</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Practice Content End -->
-    </div>
-  </section>
-  <!-- Lawyers Area End -->
-
-  <!-- Clients Section Start -->
-  <section id="clients">
-    <div class="container text-light">
-      <!-- Clients Heading Start -->
-      <div class="row">
-        <div class="col-lg-8">
-          <div class="clients-heading wow fadeInLeft">
-            <h1 class="text-light">Our Clients Say</h1>
-            <p>We are regarded as industry leaders in stunning website solutions, focused on delivering unsurpassed user
-              experiences.</p>
-          </div>
-        </div>
-      </div>
-      <!-- Clients Heading End -->
-
-      <!-- Carousel Section Start -->
-      <div class="owl-carousel owl-theme">
-
-        <!-- Clients Content Start -->
-        <div class="row pt-5">
-          <div class="col-md-4 offset-md-1 clients">
-            <div class="clients-img">
-              <img src="img/testimonial-one.jpg" alt="Clients Feedback" class="img-fluid">
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="clients-message p-2 ml-3">
-              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et
-                ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem.Lorem ipsum dolor sit amet,
-                consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
-              <h3 class="text-light">Alon Smith</h3>
-              <h6 class="text-light">CEO of AVC Group</h6>
-            </div>
-          </div>
-        </div>
-        <!-- Clients Content End -->
-
-        <!-- Clients Content Start -->
-        <div class="row pt-5">
-          <div class="col-md-4 offset-md-1 clients">
-            <div class="clients-img">
-              <img src="img/testimonial-one.jpg" alt="Clients Feedback" class="img-fluid">
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="clients-message p-2 ml-3">
-              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et
-                ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem.Lorem ipsum dolor sit amet,
-                consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
-              <h3 class="text-light">Alon Smith</h3>
-              <h6 class="text-light">CEO of AVC Group</h6>
-            </div>
-          </div>
-        </div>
-        <!-- Clients Content End -->
-
-        <!-- Clients Content Start -->
-        <div class="row pt-5">
-          <div class="col-md-4 offset-md-1 clients">
-            <div class="clients-img">
-              <img src="img/testimonial-one.jpg" alt="Clients Feedback" class="img-fluid">
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="clients-message p-2 ml-3">
-              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et
-                ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem.Lorem ipsum dolor sit amet,
-                consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</p>
-              <h3 class="text-light">Alon Smith</h3>
-              <h6 class="text-light">CEO of AVC Group</h6>
-            </div>
-          </div>
-        </div>
-        <!-- Clients Content End -->
-
-      </div>
-      <!-- Carousel Section End -->
-
-    </div>
-  </section>
-  <!-- Clients Section End -->
-
   <!-- Publication Section Start -->
   <section id="publications">
     <div class="container">
@@ -433,7 +332,7 @@
       <div class="row pt-5">
         <div class="col-lg-8">
           <div class="publication-heading">
-            <h1>כתבו עלינו</h1>
+            <h1>לקוחות ממליצים</h1>
             <p>העבודות שלנו עזרו להמון אנשים בתחומים שונים בחיים שקיבלו את מה שמגיע להם בזכות העקשנות והמסירות שלנו </p>
           </div>
         </div>
@@ -622,7 +521,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; 2020 | All rights reseved by Mrh Rifat</p>
+      <p class="m-0 text-center text-white">Copyright &copy; 2025 | All rights reseved by Niv Morim</p>
     </div>
     <!-- /.container -->
   </footer>
