--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 , shrink-to-fit=no">
   <meta name="description" content="">
-  <meta name="author" content="Niv Morim">
+  <meta name="author" content="Rakibul Hassan Rifat">
 
 
   <!-- Favicon -->
@@ -70,7 +70,7 @@
               <a class="nav-link js-scroll-trigger" href="#lawyers">עורכי הדין</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#publications">המלצות</a>
+              <a class="nav-link js-scroll-trigger" href="#publications">פרסומים</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#faq">שאלות נפוצות</a>
@@ -131,7 +131,7 @@
           <!-- History 1 Start-->
           <div class="row pt-3">
             <div class="col-md-3 pl-4">
-              <h6>2023</h6>
+              <h6>-2023</h6>
             </div>
             <div class="col-md-9">
               <p>
@@ -142,7 +142,7 @@
 
             <!-- History 2 Start-->
             <div class="col-md-3 pl-4">
-              <h6>2024</h6>
+              <h6>-2024</h6>
             </div>
             <div class="col-md-9">
               <p>
@@ -153,7 +153,7 @@
 
             <!-- History 3 Start-->
             <div class="col-md-3 pl-4">
-              <h6>2025</h6>
+              <h6>-2025</h6>
             </div>
             <div class="col-md-9">
               <p>
@@ -166,7 +166,7 @@
 
         <!-- Expertise Start-->
         <div class="col-md-5 pb-5 expertise">
-          <h5>מומחיות</h5>
+          <h5>Expertise</h5>
           <p>
             **משרדנו מתמחה בדיני נזיקין וחוזים, ומעניק ללקוחות פרטיים ועסקיים ליווי משפטי מקצועי, יסודי ומותאם אישית. אנו מייצגות נפגעים בתביעות נזיקין מול גופים פרטיים וציבוריים, לרבות תאונות דרכים, רשלנות רפואית ותאונות עבודה. בנוסף, אנו מספקות ייעוץ וייצוג משפטי בתחום החוזים – מניסוח ועריכת חוזים מסחריים ופרטיים ועד ליישוב סכסוכים והליכים משפטיים.
             
@@ -314,6 +314,8 @@
           </div>
         </div>
         <!-- 2nd Content End -->
+
+        <!-- more
         <div class="col-md-3 col-sm-6 downteam">
 
           <div class="card">
@@ -325,6 +327,98 @@
           </div>
         </div>
 
+        <div class="col-md-3 col-sm-6 downteam">
+    
+          <div class="card">
+            <img src="img/team-four.png" alt="Team Four" class="card-img-top">
+            <div class="card-body">
+              <h5>Linister White</h5>
+              <p>Attorney General</p>
+            </div>
+          </div>
+        </div>
+      -->
+      </div>
+      <!-- Practice Content End -->
+    </div>
+  </section>
+  <!-- Lawyers Area End -->
+
+  <!-- Clients Section Start -->
+  <section id="clients">
+    <div class="container text-light">
+      <!-- Clients Heading Start -->
+      <div class="row">
+        <div class="col-lg-8">
+          <div class="clients-heading wow fadeInLeft">
+            <h1 class="text-light">לקוחות מספרים </h1>
+            <p>אנו עובדים עם לקוחות פרטיים ותאגידים גדולים כאחד </p>
+          </div>
+        </div>
+      </div>
+      <!-- Clients Heading End -->
+
+      <!-- Carousel Section Start -->
+      <div class="owl-carousel owl-theme">
+
+        <!-- Clients Content Start -->
+        <div class="row pt-5">
+          <div class="col-md-4 offset-md-1 clients">
+            <div class="clients-img">
+              <img src="img/testimonial-one.jpg" alt="Clients Feedback" class="img-fluid">
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="clients-message p-2 ml-3">
+              <p>"לאורך כל התהליך קיבלתי ליווי משפטי מקצועי, יסודי ואכפתי. הצוות היה זמין לכל שאלה, הסביר לי כל שלב בדרך ודאג לאינטרסים שלי עד להשגת התוצאה הטובה ביותר. אני ממליץ בחום לכל מי שמחפש ייצוג משפטי אמין ומקצועי!" </p>
+              <h3 class="text-light">אלון סמית </h3>
+              <h6 class="text-light">מנכ"ל חברת חירטוטים </h6>
+            </div>
+          </div>
+        </div>
+        <!-- Clients Content End -->
+
+        <!-- Clients Content Start -->
+        <div class="row pt-5">
+          <div class="col-md-4 offset-md-1 clients">
+            <div class="clients-img">
+              <img src="img/testimonial-one.jpg" alt="Clients Feedback" class="img-fluid">
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="clients-message p-2 ml-3">
+              <p>"מהרגע הראשון הרגשתי שאני בידיים טובות. המקצועיות, היסודיות והיחס האישי עשו את כל ההבדל. תודה על הליווי הצמוד והנחישות שהובילה לתוצאה מצוינת! ממליצה בחום לכל מי שזקוק לייצוג משפטי." </p>
+              <h3 class="text-light">מיכאלה דיין</h3>
+              <h6 class="text-light">חברת מקורות </h6>
+            </div>
+          </div>
+        </div>
+        <!-- Clients Content End -->
+
+        <!-- Clients Content Start -->
+        <div class="row pt-5">
+          <div class="col-md-4 offset-md-1 clients">
+            <div class="clients-img">
+              <img src="img/testimonial-one.jpg" alt="Clients Feedback" class="img-fluid">
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="clients-message p-2 ml-3">
+              <p>"לאורך כל הדרך הרגשתי שיש לי על מי לסמוך. מהרגע הראשון קיבלתי יחס אישי, סבלנות והסברים מפורטים על כל שלב בתהליך. הצוות הפגין מקצועיות יוצאת דופן, ירידה לפרטים וחשיבה אסטרטגית שהובילה לתוצאה הטובה ביותר עבורי. תמיד הרגשתי שיש מישהו שמקשיב לי, מבין את הצרכים שלי ונלחם למעני. אני ממליץ בחום לכל מי שמחפש משרד עורכות דין מקצועי, אמין ומסור!" </p>
+              <h3 class="text-light">אלי כהן </h3>
+              <h6 class="text-light">ייזם נדלן </h6>
+            </div>
+          </div>
+        </div>
+        <!-- Clients Content End -->
+
+      </div>
+      <!-- Carousel Section End -->
+
+    </div>
+  </section>
+  <!-- Clients Section End -->
+
   <!-- Publication Section Start -->
   <section id="publications">
     <div class="container">
@@ -332,7 +426,7 @@
       <div class="row pt-5">
         <div class="col-lg-8">
           <div class="publication-heading">
-            <h1>לקוחות ממליצים</h1>
+            <h1>כתבו עלינו</h1>
             <p>העבודות שלנו עזרו להמון אנשים בתחומים שונים בחיים שקיבלו את מה שמגיע להם בזכות העקשנות והמסירות שלנו </p>
           </div>
         </div>
@@ -510,7 +604,7 @@
         <div class="col-md-4 offset-md-1 map-frame">
           <div class="map">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1859045.988315272!2d34.7927!3d31.9686!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151d3b3fb69d1a1f%3A0x2e54514fea3b08d9!2sRishon%20Lezion%2C%20Israel!5e0!3m2!1sen!2sbd!4v1641323718368!5m2!1sen!2sbd"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1859045.988315272!2d38.88873002274768!3d24.48721708020867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x15bdbe5197d220d5%3A0x2e54514fea3b08d9!2sMedina%20Saudi%20Arabia!5e0!3m2!1sen!2sbd!4v1641323718368!5m2!1sen!2sbd"
               width="350" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
           </div>
         </div>
@@ -521,7 +615,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; 2025 | All rights reseved by Niv Morim</p>
+      <p class="m-0 text-center text-white">Copyright &copy; 2020 | All rights reseved by Mrh Rifat</p>
     </div>
     <!-- /.container -->
   </footer>
